--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -71,6 +71,14 @@
     <Compile Include="Migrations\202109291852138_mig1.designer.cs">
       <DependentUpon>202109291852138_mig1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202112081856348_mig_writer_edit.cs" />
+    <Compile Include="Migrations\202112081856348_mig_writer_edit.designer.cs">
+      <DependentUpon>202112081856348_mig_writer_edit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202112172039336_mig-writertitle_add.cs" />
+    <Compile Include="Migrations\202112172039336_mig-writertitle_add.designer.cs">
+      <DependentUpon>202112172039336_mig-writertitle_add.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -87,6 +95,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202109291852138_mig1.resx">
       <DependentUpon>202109291852138_mig1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202112081856348_mig_writer_edit.resx">
+      <DependentUpon>202112081856348_mig_writer_edit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202112172039336_mig-writertitle_add.resx">
+      <DependentUpon>202112172039336_mig-writertitle_add.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
