--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -79,6 +79,14 @@
     <Compile Include="Migrations\202112172039336_mig-writertitle_add.designer.cs">
       <DependentUpon>202112172039336_mig-writertitle_add.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202201021047091_mig_imagesizechange.cs" />
+    <Compile Include="Migrations\202201021047091_mig_imagesizechange.designer.cs">
+      <DependentUpon>202201021047091_mig_imagesizechange.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202201031606255_mig_writer_addstatus.cs" />
+    <Compile Include="Migrations\202201031606255_mig_writer_addstatus.designer.cs">
+      <DependentUpon>202201031606255_mig_writer_addstatus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -101,6 +109,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202112172039336_mig-writertitle_add.resx">
       <DependentUpon>202112172039336_mig-writertitle_add.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202201021047091_mig_imagesizechange.resx">
+      <DependentUpon>202201021047091_mig_imagesizechange.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202201031606255_mig_writer_addstatus.resx">
+      <DependentUpon>202201031606255_mig_writer_addstatus.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
